Time: 19 ms (32.17%), Space: 76.6 MB (20.44%) - LeetHub